# 402fly

./: CONTRIBUTING.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  README_GO.md  README_RUST.md  README_TYPESCRIPT.md  SETUP.md  package.json  pyproject.toml
.cursor/plans/: rename-to-402fly-and-add-fee-mechanism-c6c3b24f.plan.md
.github/workflows/: release-publish.yml
docs/: README.md  mkdocs.yml
docs/docs/: fly402-technical-spec.md  index.md  openlibx402-technical-spec.md  quick-reference.md
docs/docs/examples/: index.md
docs/docs/examples/typescript/: langchain-agent.md  nextjs-app.md
docs/docs/go/: index.md
docs/docs/go/examples/: nethttp-server.md
docs/docs/go/getting-started/: client-quickstart.md  installation.md  (+1 more)
docs/docs/rust/: index.md
examples/: README.md
examples/go/: README.md
examples/go/echo-server/: go.mod  main.go
examples/go/nethttp-server/: client_example.go  go.mod  main.go
examples/python/fastapi-server/: .env.example  AGENTS.md  README.md  main.py  pyproject.toml  requirements.txt
examples/python/langchain-agent/: README.md  main.py  pyproject.toml  requirements.txt
examples/python/langgraph-workflow/: README.md  main.py  pyproject.toml  requirements.txt
examples/rust/actix-server/: Cargo.toml
examples/rust/actix-server/src/: main.rs
examples/rust/rocket-server/: Cargo.toml
examples/rust/rocket-server/src/: main.rs
examples/typescript/express-server/: .env.example  README.md  package.json
examples/typescript/langchain-agent/: .env.example  README.md  package.json
examples/typescript/langgraph-workflow/: .env.example  README.md  package.json
examples/typescript/nextjs-app/: .env.example  README.md  next.config.js  package.json
(+34 files in other folders)
