[package]
name = "actix-server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
fly402-core = { path = "../../../packages/rust/fly402-core" }
fly402-actix = { path = "../../../packages/rust/fly402-actix" }
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
